<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightningDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="get_users">Fetch Local Records</string>
    <string name="get_request">Fetch Server Records</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_email">Please enter email</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="where">UserId</string>
    <string name="enter_where">Please select a user</string>
    <string name="clear">Clear</string>

</resources>
